policy/tests/accounts-api-runtime-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: accounts-api-bad-runtime-socket
  namespace: accounts
spec:
  containers:
    - name: api
      image: nginx:1.27
      volumeMounts:
        - name: docker-socket
          mountPath: /var/run/docker.sock
  volumes:
    - name: docker-socket
      hostPath:
        path: /var/run/docker.sock
